Add some Java17 solutions